# DeepSeek-Oracle

./: .env  .gitignore  README.md  app.py  data.db  fortune_result.md  index.py  pyproject.toml  requirements.txt
json2ziwei/: api.py
llmana/: deepseek_ali_api.py  deepseek_huoshan_api.py  deepseekapi.py  glmapi.py  qwenmax_api.py
src/: index.js
static/: styles.css
templates/: challenges.html  fortune_telling.html  index.html  marriage_path.html  partner_character.html
token_ana/: deepseek_offical_tokenizer.py  deepseek_tokenizer.py
