[tool.poetry]
name = "deepseek-oracle"
version = "0.0.1"
description = ""
authors = ["Bald0Wang"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "2.3.2"
flask-cors = "4.0.0"
python-dotenv = "1.0.0"
transformers = "4.35.2"
requests = "2.31.0"
poetry-core = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
